Customização tela cadastro(ainda falta adaptar mais)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,10 +10,10 @@
         android:id="@+id/button_entrar2"
         android:layout_width="317dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
         android:background="@color/colorButoes"
         android:text="@string/button_entrar"
@@ -25,6 +25,7 @@
 
     <EditText
         android:id="@+id/editTextSenha"
+
         android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -33,6 +34,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:hint="@string/edit_text_senha"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +64,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="44dp"
         android:ems="10"
+        android:hint="@string/edit_text_email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
