--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorBackground">@color/colorFundo</item>
         <item name="android:textColor">@color/colorTextoNormal</item>
+        <item name="android:lineSpacingMultiplier">1.29</item>
+
+
 
     </style>
 
