--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".usuario.gui.LoginActivity">
 
     <Button
-        android:id="@+id/button_entrar2"
+        android:id="@+id/button_entrar"
         android:layout_width="317dp"
         android:layout_height="48dp"
         android:layout_marginEnd="16dp"
@@ -52,7 +52,7 @@
         android:text="@string/text_click_esqueceu_senha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_entrar2" />
+        app:layout_constraintTop_toBottomOf="@+id/button_entrar" />
 
     <EditText
         android:id="@+id/editTextEmail"
@@ -75,10 +75,8 @@
         android:layout_width="212dp"
         android:layout_height="129dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="60dp"
         android:contentDescription="@string/img_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
