Criação de classes no dominio e readme para as pastas de camadas

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -176,3 +176,4 @@
                         app:layout_constraintTop_toBottomOf="@+id/editTextConfSenha" />
             </android.support.constraint.ConstraintLayout>
     </ScrollView>
+</android.support.constraint.ConstraintLayout>
