Primeiros fragments na tela com menu (sem os tabs primeiro)
*para ser mais organizado no entendimento

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,6 +29,7 @@
     <dimen name="margin_end_card">8dp</dimen>
     <dimen name="margin_top_card">8dp</dimen>
     <dimen name="margin_top_button">12dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 
 
 </resources>
