--- a/app/src/main/res/layout/fragment_tela_com_menu.xml
+++ b/app/src/main/res/layout/fragment_tela_com_menu.xml
@@ -20,4 +20,13 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
+    <ListView
+        android:id="@+id/list_viewFrag"
+        android:layout_width="368dp"
+        android:layout_height="516dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/section_label" />
+
 </android.support.constraint.ConstraintLayout>
