--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="ToolBarWithNavigationBack" >
+        <item name="navigationIcon">@drawable/ic_arrow_back_24dp</item>
+    </style>
+
 </resources>
