Método OnClickModificar sem View view e mudança referentes a cores do sublinhado

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,6 +30,7 @@
     <dimen name="margin_top_card">8dp</dimen>
     <dimen name="margin_top_button">12dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 
 
 </resources>
