--- a/app/src/main/res/layout/activity_configuracoes.xml
+++ b/app/src/main/res/layout/activity_configuracoes.xml
@@ -53,14 +53,16 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginTop="30dp"
                 android:hint="@string/text_view_email_novo"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorTextoNormal"
                 android:textSize="18sp"
                 android:visibility="visible" />
 
             <EditText
                 android:id="@+id/edtEmailNovo"
+                android:textColor="@color/colorTextoNormal"
                 android:layout_width="292dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -77,7 +79,7 @@
                 android:layout_marginRight="16dp"
                 android:hint="@string/edit_text_conf_email_novo"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorTextoNormal"
                 android:textSize="18sp"
                 android:visibility="visible" />
 
@@ -88,6 +90,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
                 android:hint="@string/edit_text_email"
+                android:textColor="@color/colorTextoNormal"
                 android:inputType="textEmailAddress" />
 
             <TextView
@@ -99,7 +102,7 @@
                 android:layout_marginRight="16dp"
                 android:hint="@string/text_view_senha_nova"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorTextoNormal"
                 android:textSize="18sp"
                 android:visibility="visible" />
             <EditText
@@ -109,6 +112,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
                 android:hint="@string/edit_text_senha"
+                android:textColor="@color/colorTextoNormal"
                 android:inputType="textPassword" />
 
             <TextView
@@ -120,7 +124,7 @@
                 android:layout_marginRight="16dp"
                 android:hint="@string/text_view_conf_senha_nova"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorTextoNormal"
                 android:textSize="18sp"
                 android:visibility="visible" />
             <EditText
@@ -130,6 +134,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
                 android:hint="@string/edit_text_senha"
+                android:textColor="@color/colorTextoNormal"
                 android:inputType="textPassword" />
 
 
