--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#e86d3f</color>
     <color name="colorPrimaryDark">#e15e36</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ec7e4f</color>
     <color name="colorButoes">#e86d3f</color>
     <color name="colorTextoBut">#ffffff</color>
     <color name="colorFundo">#ffffff</color>
