--- a/app/src/main/res/layout/activity_mudar_email.xml
+++ b/app/src/main/res/layout/activity_mudar_email.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".usuario.gui.AlterarEmailActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarConfig"
+        android:layout_width="384dp"
+        android:layout_height="57dp"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ToolBarWithNavigationBack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/button_criar_AlterarDados2"
         android:layout_width="295dp"
@@ -77,29 +89,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="84dp"
         android:text="@string/text_view_novo_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAlterarDadosPessoais" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarConfig" />
 
     <TextView
         android:id="@+id/textViewAlterarDadosPessoais"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_horizontal"
         android:text="@string/button_mudar_email"
-        android:textSize="30sp"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbarConfig"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.31"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/toolbarConfig" />
 </android.support.constraint.ConstraintLayout>
