--- a/app/src/main/res/layout/adapter_titulo.xml
+++ b/app/src/main/res/layout/adapter_titulo.xml
@@ -16,28 +16,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tNome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:textSize="20sp" />
 
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="175dp">
 
 
             <ImageView
                 android:id="@+id/img"
-                android:layout_width="250dp"
-                android:layout_height="107dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="6dp"
                 android:src="@drawable/got"
-                android:layout_marginBottom="2dp"
                 />
         </FrameLayout>
 
