--- a/app/src/main/res/layout/activity_recomendacoes.xml
+++ b/app/src/main/res/layout/activity_recomendacoes.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".titulos.gui.RecomendacoesActivity">
+    tools:context=".titulo.gui.RecomendacoesActivity">
 
 </android.support.constraint.ConstraintLayout>
