--- a/app/src/main/res/layout/content_tela_com_menu.xml
+++ b/app/src/main/res/layout/content_tela_com_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".titulos.gui.TelaComMenuActivity"
+    tools:context=".titulo.gui.TelaComMenuActivity"
     tools:showIn="@layout/app_bar_tela_com_menu">
 
 </android.support.constraint.ConstraintLayout>
