--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,17 +21,16 @@
         app:srcCompat="@mipmap/ic_logo_launcher_round" />
 
     <TextView
+        android:id="@+id/nomeView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/nav_header_title"
-        android:textColor="@color/colorTextoNormal"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/colorTextoNormal" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/emailView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
