Modificação toolbar (+-) + apagado os q foram gerados de tela com menu

--- a/app/src/main/res/layout/activity_escolha_configuracao.xml
+++ b/app/src/main/res/layout/activity_escolha_configuracao.xml
@@ -57,8 +57,8 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarConfig"
-        android:layout_width="384dp"
-        android:layout_height="57dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ToolBarWithNavigationBack"
