--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".titulos.gui.DetalhesActivity">
+    tools:context=".titulo.gui.DetalhesActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
