--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="colorFundo">#ffffff</color>
     <color name="colorTextoNormal">#0d0d0d</color>
     <color name="colorControlHighlight">#bcbfcc</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorBlue">#3F51B5</color>
 
 </resources>
